# ddiview

./: CMakeLists.txt  README.md  common.cpp  common.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  statisticsresultdialog.cpp  statisticsresultdialog.h  statisticsresultdialog.ui
chunk/: basechunk.cpp  basechunk.h  chunkarray.h  chunkcreator.cpp  chunkcreator.h  chunkreaderguards.h  dbsinger.h  dbtimbre.h  dbtimbremodel.h  dbvarticulation.h  dbvarticulationphu.h  dbvarticulationphu_devdb.h  dbvarticulationphupart.h  dbvarticulationphupart_devdb.h  dbvoice.h  dbvstationary.h  dbvstationaryphu.h  dbvstationaryphupart.h  dbvstationaryphupart_devdb.h  dbvvqmorph.h  dbvvqmorphphu.h  dbvvqmorphphupart.h  emptychunk.h  item_articulationsection.h  item_audioframerefs.h  item_directory.h  item_eprguides.h  item_groupedphoneme.h  item_phonemegroup.h  item_phoneticunit.h  phonemedict.h  phonemegroup.h  propertytype.cpp  propertytype.h  refsoundchunk.h  skipchunk.h  smsframe.h  smsgenerictrack.h  smsregion.h  soundchunk.h
docs/: CHUNK_STRUCTURES.md  ENGINE_ARCHITECTURE.md  SMS_FORMAT.md  VQM_SMS_FORMAT.md
parser/: ddi.cpp  ddi.h
ui/: articulationtabledialog.cpp  articulationtabledialog.h  articulationtabledialog.ui  ddiexportjsonoptionsdialog.cpp  ddiexportjsonoptionsdialog.h  ddiexportjsonoptionsdialog.ui  mainwindow.cpp  mainwindow.h  mainwindow.ui  mediatoolwindow.cpp  mediatoolwindow.h  mediatoolwindow.ui  propertycontextmenu.cpp  propertycontextmenu.h  statisticsresultdialog.ui  uicommon.cpp  uicommon.h  vqmgeneratordialog.cpp  vqmgeneratordialog.h  vqmgeneratordialog.ui
util/: smsgenerator.cpp  smsgenerator.h  util.cpp  util.h
